--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@
 .curved-clip {
     clip-path: ellipse(100% 100% at 50% 0%);
 }
+
+    /* body {
+    font-family: 'Poppins', sans-serif;
+    }
+    */
+
+
+
